src/test/ui/error-codes/E0443.stderr
error[E0443]: intrinsic return value has wrong type: found `i64x8`, expected `i8x8` which was used for this vector type previously in this signature
  --> $DIR/E0443.rs:20:5
   |
LL |     fn aarch64_vld2_s8(x: *const i8) -> (i8x8, i64x8);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0443`.
